src/objects/DataImport__c.object
<CustomObject>
    <description>Custom object to hold denormalized data records that can be imported into the Nonprofit Starter Pack.</description>
    <fields>
        <fullName>Account1ImportStatus__c</fullName>
        <label>Account1 Import Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account1Imported__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account1 Imported</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Data_Imports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account1_City__c</fullName>
        <inlineHelpText>Account1.BillingCity</inlineHelpText>
        <label>Account1 City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account1_Country__c</fullName>
        <inlineHelpText>Account1.BillingCountry</inlineHelpText>
        <label>Account1 Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account1_Name__c</fullName>
        <inlineHelpText>Account1.Name</inlineHelpText>
        <label>Account1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account1_Phone__c</fullName>
        <inlineHelpText>Account1.Phone</inlineHelpText>
        <label>Account1 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account1_State_Province__c</fullName>
        <inlineHelpText>Account1.BillingState</inlineHelpText>
        <label>Account1 State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account1_Street__c</fullName>
        <inlineHelpText>Account1.BillingStreet</inlineHelpText>
        <label>Account1 Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account1_Website__c</fullName>
        <inlineHelpText>Account1.Website</inlineHelpText>
        <label>Account1 Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Account1_Zip_Postal_Code__c</fullName>
        <inlineHelpText>Account1.BillingPostalCode</inlineHelpText>
        <label>Account1 Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account2ImportStatus__c</fullName>
        <label>Account2 Import Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account2Imported__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account2 Imported</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Data_Imports1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account2_City__c</fullName>
        <inlineHelpText>Account2.BillingCity</inlineHelpText>
        <label>Account2 City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account2_Country__c</fullName>
        <inlineHelpText>Account2.BillingCountry</inlineHelpText>
        <label>Account2 Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account2_Name__c</fullName>
        <inlineHelpText>Account2.Name</inlineHelpText>
        <label>Account2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account2_Phone__c</fullName>
        <inlineHelpText>Account2.Phone</inlineHelpText>
        <label>Account2 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account2_State_Province__c</fullName>
        <inlineHelpText>Account2.BillingState</inlineHelpText>
        <label>Account2 State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account2_Street__c</fullName>
        <inlineHelpText>Account2.BillingStreet</inlineHelpText>
        <label>Account2 Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account2_Website__c</fullName>
        <inlineHelpText>Account2.Website</inlineHelpText>
        <label>Account2 Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Account2_Zip_Postal_Code__c</fullName>
        <inlineHelpText>Account2.BillingPostalCode</inlineHelpText>
        <label>Account2 Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApexJobId__c</fullName>
        <description>The ApexJobID of the Batch Job that processed the record.</description>
        <inlineHelpText>The ApexJobID of the Batch Job that processed the record.</inlineHelpText>
        <label>ApexJobId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_Status__c</fullName>
        <label>Campaign Member Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact1ImportStatus__c</fullName>
        <label>Contact1 Import Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact1Imported__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact1 Imported</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Data_Imports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact1_Alternate_Email__c</fullName>
        <inlineHelpText>Contact1.npe01__AlternateEmail__c</inlineHelpText>
        <label>Contact1 Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact1_Birthdate__c</fullName>
        <inlineHelpText>Contact1.Birthdate</inlineHelpText>
        <label>Contact1 Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact1_Firstname__c</fullName>
        <inlineHelpText>Contact1.Firstname</inlineHelpText>
        <label>Contact1 First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact1_Home_Phone__c</fullName>
        <inlineHelpText>Contact1.HomePhone</inlineHelpText>
        <label>Contact1 Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact1_Lastname__c</fullName>
        <inlineHelpText>Contact1.Lastname</inlineHelpText>
        <label>Contact1 Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact1_Mobile_Phone__c</fullName>
        <inlineHelpText>Contact1.MobilePhone</inlineHelpText>
        <label>Contact1 Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact1_Other_Phone__c</fullName>
        <inlineHelpText>Contact1.OtherPhone</inlineHelpText>
        <label>Contact1 Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact1_Personal_Email__c</fullName>
        <inlineHelpText>Contact1.npe01__HomeEmail__c</inlineHelpText>
        <label>Contact1 Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact1_Preferred_Email__c</fullName>
        <inlineHelpText>Contact1.npe01__Preferred_Email__c</inlineHelpText>
        <label>Contact1 Preferred Email</label>
        <picklist>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact1_Preferred_Phone__c</fullName>
        <inlineHelpText>Contact1.npe01__PreferredPhone__c</inlineHelpText>
        <label>Contact1 Preferred Phone</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact1_Salutation__c</fullName>
        <inlineHelpText>Contact1.Salutation</inlineHelpText>
        <label>Contact1 Salutation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact1_Title__c</fullName>
        <inlineHelpText>Contact1.Title</inlineHelpText>
        <label>Contact1 Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact1_Work_Email__c</fullName>
        <inlineHelpText>Contact1.npe01__WorkEmail__c</inlineHelpText>
        <label>Contact1 Work Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact1_Work_Phone__c</fullName>
        <inlineHelpText>Contact1.npe01__WorkPhone__c</inlineHelpText>
        <label>Contact1 Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact2ImportStatus__c</fullName>
        <label>Contact2 Import Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact2Imported__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact2 Imported</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Data_Imports1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact2_Alternate_Email__c</fullName>
        <inlineHelpText>Contact2.npe01__AlternateEmail__c</inlineHelpText>
        <label>Contact2 Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact2_Birthdate__c</fullName>
        <inlineHelpText>Contact2.Birthdate</inlineHelpText>
        <label>Contact2 Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact2_Firstname__c</fullName>
        <inlineHelpText>Contact2.Firstname</inlineHelpText>
        <label>Contact2 First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact2_Home_Phone__c</fullName>
        <inlineHelpText>Contact2.HomePhone</inlineHelpText>
        <label>Contact2 Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact2_Lastname__c</fullName>
        <inlineHelpText>Contact2.Lastname</inlineHelpText>
        <label>Contact2 Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact2_Mobile_Phone__c</fullName>
        <inlineHelpText>Contact2.MobilePhone</inlineHelpText>
        <label>Contact2 Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact2_Other_Phone__c</fullName>
        <inlineHelpText>Contact2.OtherPhone</inlineHelpText>
        <label>Contact2 Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact2_Personal_Email__c</fullName>
        <inlineHelpText>Contact2.npe01__HomeEmail__c</inlineHelpText>
        <label>Contact2 Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact2_Preferred_Email__c</fullName>
        <inlineHelpText>Contact2.npe01__Preferred_Email__c</inlineHelpText>
        <label>Contact2 Preferred Email</label>
        <picklist>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact2_Preferred_Phone__c</fullName>
        <inlineHelpText>Contact2.npe01__PreferredPhone__c</inlineHelpText>
        <label>Contact2 Preferred Phone</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact2_Salutation__c</fullName>
        <inlineHelpText>Contact2.Salutation</inlineHelpText>
        <label>Contact2 Salutation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact2_Title__c</fullName>
        <inlineHelpText>Contact2.Title</inlineHelpText>
        <label>Contact2 Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact2_Work_Email__c</fullName>
        <inlineHelpText>Contact2.npe01__WorkEmail__c</inlineHelpText>
        <label>Contact2 Work Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact2_Work_Phone__c</fullName>
        <inlineHelpText>Contact2.npe01__WorkPhone__c</inlineHelpText>
        <label>Contact2 Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DonationImportStatus__c</fullName>
        <label>Donation Import Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DonationImported__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Donation Imported</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Data_Imports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Donation_Amount__c</fullName>
        <inlineHelpText>Opportunity.Amount</inlineHelpText>
        <label>Donation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Donation_Campaign_Name__c</fullName>
        <label>Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donation_Date__c</fullName>
        <inlineHelpText>Opportunity.CloseDate</inlineHelpText>
        <label>Donation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Donation_Description__c</fullName>
        <inlineHelpText>Opportunity.Description</inlineHelpText>
        <label>Donation Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Donation_Donor__c</fullName>
        <description>Specifies whether the donation is an individual donation from Contact1, or an organizational donation from Account1.</description>
        <inlineHelpText>Specifies whether the donation is an individual donation from Contact1, or an organizational donation from Account1.</inlineHelpText>
        <label>Donation Donor</label>
        <picklist>
            <picklistValues>
                <fullName>Contact1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Donation_Member_Level__c</fullName>
        <inlineHelpText>Opportunity.npe01__Member_Level__c</inlineHelpText>
        <label>Donation Member Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donation_Membership_End_Date__c</fullName>
        <inlineHelpText>Opportunity.npe01__Membership_End_Date__c</inlineHelpText>
        <label>Donation Membership End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Donation_Membership_Origin__c</fullName>
        <inlineHelpText>Opportunity.npe01__Membership_Origin__c</inlineHelpText>
        <label>Donation Membership Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donation_Membership_Start_Date__c</fullName>
        <inlineHelpText>Opportunity.npe01__Membership_Start_Date__c</inlineHelpText>
        <label>Donation Membership Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Donation_Name__c</fullName>
        <description>The donation&apos;s name.  Will be automatically generated by the system if left empty.</description>
        <inlineHelpText>Opportunity.Name</inlineHelpText>
        <label>Donation Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donation_Record_Type_Name__c</fullName>
        <description>The Name of the Opportunity Record Type to use for the donation.  Uses default Record Type if left blank.</description>
        <inlineHelpText>The Name of the Opportunity Record Type to use for the donation. Uses default Record Type if left blank.</inlineHelpText>
        <label>Donation Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donation_Stage__c</fullName>
        <description>The Stage to set on the Opportunity.  Will set to Closed Won if left blank.</description>
        <inlineHelpText>Opportunity.StageName</inlineHelpText>
        <label>Donation Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donation_Type__c</fullName>
        <inlineHelpText>Opportunity.Type</inlineHelpText>
        <label>Donation Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FailureInformation__c</fullName>
        <description>Description of what caused the Data Import record to fail to be imported.</description>
        <inlineHelpText>Description of what caused the Data Import record to fail to be imported.</inlineHelpText>
        <label>Failure Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HomeAddressImportStatus__c</fullName>
        <label>Home Address Import Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomeAddressImported__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Home Address Imported</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipName>Data_Imports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Home_City__c</fullName>
        <inlineHelpText>Address.npsp__MailingCity__c</inlineHelpText>
        <label>Home City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Country__c</fullName>
        <inlineHelpText>Address.npsp__MailingCountry__c</inlineHelpText>
        <label>Home Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_State_Province__c</fullName>
        <inlineHelpText>Address.npsp__MailingState__c</inlineHelpText>
        <label>Home State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Street__c</fullName>
        <inlineHelpText>Address.npsp__MailingStreet__c</inlineHelpText>
        <label>Home Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Home_Zip_Postal_Code__c</fullName>
        <inlineHelpText>Address.npsp__MailingPostalCode__c</inlineHelpText>
        <label>Home Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HouseholdAccountImported__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household Account Imported</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NPSP Data Imports (Household Account Imported)</relationshipLabel>
        <relationshipName>NPSP_Data_Imports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ImportedDate__c</fullName>
        <description>When the Data Import record was successfully imported.</description>
        <inlineHelpText>When the Data Import record was successfully imported.</inlineHelpText>
        <label>Imported Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Payment_Check_Reference_Number__c</fullName>
        <inlineHelpText>Payment.npe01__Check_Reference_Number__c</inlineHelpText>
        <label>Payment Check/Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <inlineHelpText>Payment.npe01__Payment_Method__c</inlineHelpText>
        <label>Payment Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status of importing the Data Import record.</description>
        <inlineHelpText>The status of importing the Data Import record.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Imported</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>NPSP Data Import</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>FailureInformation__c</columns>
        <columns>Contact1_Firstname__c</columns>
        <columns>Contact1_Lastname__c</columns>
        <columns>Account1_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Failed_Data_Imports</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>FailureInformation__c</columns>
        <columns>Contact1_Firstname__c</columns>
        <columns>Contact1_Lastname__c</columns>
        <columns>Account1_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </filters>
        <label>Failed Data Imports</label>
    </listViews>
    <listViews>
        <fullName>Succesfully_Imported</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>FailureInformation__c</columns>
        <columns>Contact1_Firstname__c</columns>
        <columns>Contact1_Lastname__c</columns>
        <columns>Account1_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Imported</value>
        </filters>
        <label>Succesfully Imported</label>
    </listViews>
    <listViews>
        <fullName>To_Be_Imported</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>FailureInformation__c</columns>
        <columns>Contact1_Firstname__c</columns>
        <columns>Contact1_Lastname__c</columns>
        <columns>Account1_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Imported</value>
        </filters>
        <label>To Be Imported</label>
    </listViews>
    <nameField>
        <displayFormat>DI-{000000}</displayFormat>
        <label>Data Import ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NPSP Data Imports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>